# stapler

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.example.yml  main.py  pyproject.toml
.github/workflows/: docker.yml  pythonci.yml
data/: .gitignore
src/: __init__.py  cert.py  cert_manager.py  data_dir.py  handler.py  handlers.py  logs.py  page.py  params.py  project.py  registry.py  server.py  token_manager.py  tokens.py
tests/: __init__.py  test_cert_manager.py  test_data_dir.py  test_handlers.py  test_page.py  test_params.py  test_project.py  test_registry.py  test_server.py  test_token_manager.py
