[project]
name = "stapler"
version = "0.1.0"
description = "Static pages as simple as a gzip file"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "importlib>=1.0.4",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "ty>=0.0.29",
]

[tool.ruff.lint]
select = ["E", "F", "C", "W"]
ignore = []