[project]
name = "stapler"
version = "0.1.0"
description = "Static pages as simple as a gzip file"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "E501", "S104", "PLR2004", "ANN401", "BLE001", "COM812", "S603", "PLR0911", "S101", "PT"]

[tool.coverage.run]
source = ["src"]
omit = ["src/logs.py"]
